# Tangrams

./: .env.example  .gitignore  ANALYSIS_SCOPE.md  README.md  RESULTS_SAMPLE.md  SPEC.md  clark_wilkes_gibbs_1986.md  main.tex  pyproject.toml
results/sample_run/: manifest.json  np_type_cache.json  summary.md
results/sample_run/pair_0/: trial_1.json  trial_2.json  trial_3.json  trial_4.json  trial_5.json  trial_6.json
results/sample_run/plots/: accuracy_by_trial.csv  figure_2_words_per_trial.csv  figure_3_turns_per_trial.csv  figure_4_words_per_position.csv  np_type_classifications.csv  np_type_distribution.csv
scripts/: __init__.py  analyze_results.py  inspect_transcript.py  run_experiment.py  run_web_session.py
src/tangram/: __init__.py  client.py  config.py  experiment.py  human.py  logging.py  participants.py  prompts.py  protocol.py  runner.py  stimuli.py  webapp.py
src/tangram/analysis/: __init__.py  coding.py  metrics.py  plots.py
tests/: __init__.py  test_client.py  test_human.py  test_metrics.py  test_protocol.py  test_runner.py  test_stimuli.py
