[project]
name = "tangram-replication"
version = "0.1.0"
description = "LLM replication harness for Clark & Wilkes-Gibbs (1986) Tangram reference experiment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.0",
    "matplotlib>=3.8.0",
    "openai>=2.36.0",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tangram"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
